Changes to dashboard and javascript file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="col-12">
       <span class="d-flex align-items-center purchase-popup">
         <p>Hack2022 This is an </p>
-        <a href="">Upgrade To Pro</a>
+        <a href="">Details</a>
         <i class="typcn typcn-delete-outline" id="bannerClose"></i>
       </span>
     </div>
@@ -387,101 +387,27 @@
             <a class="nav-link" href="index.html">
               <i class="typcn typcn-device-desktop menu-icon"></i>
               <span class="menu-title">Dashboard</span>
-              <div class="badge badge-danger">new</div>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
               <i class="typcn typcn-document-text menu-icon"></i>
-              <span class="menu-title">UI Elements</span>
+              <span class="menu-title">States</span>
               <i class="menu-arrow"></i>
             </a>
-            <div class="collapse" id="ui-basic">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
-              </ul>
-            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
               <i class="typcn typcn-film menu-icon"></i>
-              <span class="menu-title">Form elements</span>
+              <span class="menu-title">Cities</span>
               <i class="menu-arrow"></i>
             </a>
-            <div class="collapse" id="form-elements">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"><a class="nav-link" href="pages/forms/basic_elements.html">Basic Elements</a></li>
-              </ul>
-            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
               <i class="typcn typcn-chart-pie-outline menu-icon"></i>
-              <span class="menu-title">Charts</span>
+              <span class="menu-title">Statistics</span>
               <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="charts">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/charts/chartjs.html">ChartJs</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
-              <i class="typcn typcn-th-small-outline menu-icon"></i>
-              <span class="menu-title">Tables</span>
-              <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="tables">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/tables/basic-table.html">Basic table</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
-              <i class="typcn typcn-compass menu-icon"></i>
-              <span class="menu-title">Icons</span>
-              <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="icons">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/icons/mdi.html">Mdi icons</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-              <i class="typcn typcn-user-add-outline menu-icon"></i>
-              <span class="menu-title">User Pages</span>
-              <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="auth">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
-              <i class="typcn typcn-globe-outline menu-icon"></i>
-              <span class="menu-title">Error pages</span>
-              <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="error">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://bootstrapdash.com/demo/polluxui-free/docs/documentation.html">
-              <i class="typcn typcn-mortar-board menu-icon"></i>
-              <span class="menu-title">Documentation</span>
             </a>
           </li>
         </ul>
@@ -491,10 +417,29 @@
         <div class="content-wrapper">
 
           <div class="row">
-            <div class="col-xl-6 grid-margin stretch-card flex-column">
+            <div class="col-xl-12 grid-margin stretch-card flex-column">
+              <h5 class="mb-2 text-titlecase mb-4">General Statistics</h5>
+              <div class="row h-100">
+                <div class="col-md-12 stretch-card">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="d-flex justify-content-between align-items-start flex-wrap">
+                        <div>
+                          <p class="mb-3">Sections</p>
+                          <h3>67842</h3>
+                        </div>
+                        <div id="income-chart-legend" class="d-flex flex-wrap mt-1 mt-md-0"></div>
+                      </div>
+                      <canvas id="income-chart"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-12 grid-margin stretch-card flex-column">
                 <h5 class="mb-2 text-titlecase mb-4">Status statistics</h5>
               <div class="row">
-                <div class="col-md-6 grid-margin stretch-card">
+                <div class="col-md-4 grid-margin stretch-card">
                   <div class="card">
                     <div class="card-body d-flex flex-column justify-content-between">
                       <div class="d-flex justify-content-between align-items-center mb-2">
@@ -506,7 +451,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 grid-margin stretch-card">
+                <div class="col-md-4 grid-margin stretch-card">
                   <div class="card">
                     <div class="card-body d-flex flex-column justify-content-between">
                       <div class="d-flex justify-content-between align-items-center mb-2">
@@ -529,7 +474,7 @@
                 </div>
               </div>
               <div class="row h-100">
-                <div class="col-md-6 stretch-card grid-margin grid-margin-md-0">
+                <div class="col-md-4 stretch-card grid-margin grid-margin-md-0">
                   <div class="card">
                     <div class="card-body d-flex flex-column justify-content-between">
                       <p class="text-muted">Sales Analytics</p>
@@ -541,7 +486,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 stretch-card">
+                <div class="col-md-4 stretch-card">
                   <div class="card">
                     <div class="card-body">
                       <div class="row h-100">
@@ -561,166 +506,6 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-6 grid-margin stretch-card flex-column">
-              <h5 class="mb-2 text-titlecase mb-4">Income statistics</h5>
-              <div class="row h-100">
-                <div class="col-md-12 stretch-card">
-                  <div class="card">
-                    <div class="card-body">
-                      <div class="d-flex justify-content-between align-items-start flex-wrap">
-                        <div>
-                          <p class="mb-3">Monthly Increase</p>
-                          <h3>67842</h3>
-                        </div>
-                        <div id="income-chart-legend" class="d-flex flex-wrap mt-1 mt-md-0"></div>
-                      </div>
-                      <canvas id="income-chart"></canvas>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-xl-4 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body border-bottom">
-                  <div class="d-flex justify-content-between align-items-center flex-wrap">
-                    <h6 class="mb-2 mb-md-0 text-uppercase font-weight-medium">Overall sales</h6>
-                    <div class="dropdown">
-                      <button class="btn bg-white p-0 pb-1 text-muted btn-sm dropdown-toggle" type="button" id="dropdownMenuSizeButton3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Last 30 days
-                      </button>
-                      <div class="dropdown-menu" aria-labelledby="dropdownMenuSizeButton3">
-                        <h6 class="dropdown-header">Settings</h6>
-                        <a class="dropdown-item" href="javascript:;">Action</a>
-                        <a class="dropdown-item" href="javascript:;">Another action</a>
-                        <a class="dropdown-item" href="javascript:;">Something else here</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="javascript:;">Separated link</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-body">
-                  <canvas id="sales-chart-c" class="mt-2"></canvas>
-                  <div class="d-flex align-items-center justify-content-between border-bottom pb-3 mb-3 mt-4">
-                    <div class="d-flex flex-column justify-content-center align-items-center">
-                      <p class="text-muted">Gross Sales</p>
-                      <h5>492</h5>
-                      <div class="d-flex align-items-baseline">
-                        <p class="text-success mb-0">0.5%</p>
-                        <i class="typcn typcn-arrow-up-thick text-success"></i>
-                      </div>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center align-items-center">
-                      <p class="text-muted">Purchases</p>
-                      <h5>87k</h5>
-                      <div class="d-flex align-items-baseline">
-                        <p class="text-success mb-0">0.8%</p>
-                        <i class="typcn typcn-arrow-up-thick text-success"></i>
-                      </div>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center align-items-center">
-                      <p class="text-muted">Tax Return</p>
-                      <h5>882</h5>
-                      <div class="d-flex align-items-baseline">
-                        <p class="text-danger mb-0">-04%</p>
-                        <i class="typcn typcn-arrow-down-thick text-danger"></i>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="dropdown">
-                      <button class="btn bg-white p-0 pb-1 pt-1 text-muted btn-sm dropdown-toggle" type="button" id="dropdownMenuSizeButton3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Last 7 days
-                      </button>
-                      <div class="dropdown-menu" aria-labelledby="dropdownMenuSizeButton3">
-                        <h6 class="dropdown-header">Settings</h6>
-                        <a class="dropdown-item" href="javascript:;">Action</a>
-                        <a class="dropdown-item" href="javascript:;">Another action</a>
-                        <a class="dropdown-item" href="javascript:;">Something else here</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="javascript:;">Separated link</a>
-                      </div>
-                    </div>
-                    <p class="mb-0">overview</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-xl-4 grid-margin stretch-card">
-              <div class="row">
-                <div class="col-md-12 grid-margin stretch-card">
-                  <div class="card newsletter-card bg-gradient-warning">
-                    <div class="card-body">
-                      <div class="d-flex flex-column align-items-center justify-content-center h-100">
-                        <h5 class="mb-3 text-white">Newsletter</h5>
-                        <form class="form d-flex flex-column align-items-center justify-content-between w-100">
-                          <div class="form-group mb-2 w-100">
-                            <input type="text" class="form-control" placeholder="email address">
-                          </div>
-                          <button class="btn btn-danger btn-rounded mt-1" type="submit">Subscribe</button>
-                        </form>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-12 stretch-card">
-                  <div class="card profile-card bg-gradient-primary">
-                    <div class="card-body">
-                      <div class="row align-items-center h-100">
-                        <div class="col-md-4">
-                          <figure class="avatar mx-auto mb-4 mb-md-0">
-                            <img src="images/faces/face20.jpg" alt="avatar">
-                          </figure>
-                        </div>
-                        <div class="col-md-8">
-                          <h5 class="text-white text-center text-md-left">Phoebe Kennedy</h5>
-                          <p class="text-white text-center text-md-left">kennedy@gmail.com</p>
-                          <div class="d-flex align-items-center justify-content-between info pt-2">
-                            <div>
-                              <p class="text-white font-weight-bold">Birth date</p>
-                              <p class="text-white font-weight-bold">Birth city</p>
-                            </div>
-                            <div>
-                              <p class="text-white">16 Sep 2019</p>
-                              <p class="text-white">Netherlands</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-xl-4 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body border-bottom">
-                  <div class="d-flex justify-content-between align-items-center flex-wrap">
-                    <h6 class="mb-2 mb-md-0 text-uppercase font-weight-medium">Sales statistics</h6>
-                    <div class="dropdown">
-                      <button class="btn bg-white p-0 pb-1 text-muted btn-sm dropdown-toggle" type="button" id="dropdownMenuSizeButton4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Last 7 days
-                      </button>
-                      <div class="dropdown-menu" aria-labelledby="dropdownMenuSizeButton4">
-                        <h6 class="dropdown-header">Settings</h6>
-                        <a class="dropdown-item" href="javascript:;">Action</a>
-                        <a class="dropdown-item" href="javascript:;">Another action</a>
-                        <a class="dropdown-item" href="javascript:;">Something else here</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="javascript:;">Separated link</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-body">
-                  <canvas id="sales-chart-d" height="320"></canvas>
-                </div>
-              </div>
-            </div>
           </div>
 
           <div class="row">
@@ -729,7 +514,7 @@
                 <div class="card-body">
                   <div class="d-flex align-items-center justify-content-between justify-content-md-center justify-content-xl-between flex-wrap mb-4">
                     <div>
-                      <p class="mb-2 text-md-center text-lg-left">Total Expenses</p>
+                      <p class="mb-2 text-md-center text-lg-left">Total Reached</p>
                       <h1 class="mb-0">8742</h1>
                     </div>
                     <i class="typcn typcn-briefcase icon-xl text-secondary"></i>
@@ -743,8 +528,8 @@
                 <div class="card-body">
                   <div class="d-flex align-items-center justify-content-between justify-content-md-center justify-content-xl-between flex-wrap mb-4">
                     <div>
-                      <p class="mb-2 text-md-center text-lg-left">Total Budget</p>
-                      <h1 class="mb-0">47,840</h1>
+                      <p class="mb-2 text-md-center text-lg-left">Total Unreached</p>
+                      <h1 class="mb-0">47840</h1>
                     </div>
                     <i class="typcn typcn-chart-pie icon-xl text-secondary"></i>
                   </div>
@@ -758,7 +543,7 @@
                   <div class="d-flex align-items-center justify-content-between justify-content-md-center justify-content-xl-between flex-wrap mb-4">
                     <div>
                       <p class="mb-2 text-md-center text-lg-left">Total Balance</p>
-                      <h1 class="mb-0">$7,243</h1>
+                      <h1 class="mb-0">7243</h1>
                     </div>
                     <i class="typcn typcn-clipboard icon-xl text-secondary"></i>
                   </div>
